# chess

./: .gitignore  Cargo.toml  profile.sh
benches/: moves.rs
src/: bitboard.rs  board.rs  castle.rs  check.rs  dir.rs  error.rs  fen.rs  hash.rs  lib.rs  main.rs  move_gen.rs  moves.rs  perft.rs  piece.rs  position.rs  ray.rs  square.rs
src/board/: action.rs  attacks.rs  builder.rs  fen.rs  generate.rs  hash.rs  index.rs  make.rs  modify.rs  move_cache.rs  move_gen.rs  perft.rs  position.rs
src/board/position/: action.rs  attacks.rs
src/moves/: generate.rs  make.rs
src/piece/: init.rs
src/position/: attacks.rs  index.rs  pins.rs  transaction.rs
src/ray/: iter.rs
tests/: collision_detection.rs  integration_test.rs
tests/common/: mod.rs
tests/perft/: mod.rs
