[package]
name = "chb_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
rand = "0.8.5"
regex = "1"

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "moves"
harness = false
