[package]
name = "chb_chess"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nohash-hasher = "0.2.0"
rand = "0.8.5"
getrandom = { version = "0.2" }
regex = "1"
serde = { version = "1.0.160", features = ["derive"], optional = true }
serde_arrays = "0.1.0"

[dev-dependencies]
criterion = "0.4"

[features]
serde = ["dep:serde"]
wasm = ["getrandom/js"]

[[bench]]
name = "moves"
harness = false
